# trading-bot

./: .gitignore  README.md  compatible_logging.py  consolidate_database.py  database_diagnostic.py  database_fix.py  db.txt  diagnose_bot.py  fix_asyncio_error.py  fix_compound_and_telegram.py  fix_compound_manager.py  fix_import_error.py  fix_missing_trades.py  fix_stuck_bot.sh  force_compund_fix.py  grid_diagnostic.py  health_check.sh  log_analyzer.py  path_diagnostic.py  pyproject.toml  quick_log_check.sh  simple_integration.py  sync_to_binance.py  test_compund_fix.py  test_grid.py  verify_bot_startup.sh  verify_fix.py
data/: trading_history.db
data/performance/: trades.json
src/trading_bot/: binance_precision_fix.py  install_complete_enhancement.py  main.py  main.py.backup_1751001954  patch_binance.py  telegram_setup_test.py
src/trading_bot/ai/: __init__.py  continuous_learning_system.py  mcp_analyzer.py  mcp_optimizer.py
src/trading_bot/config/: ai_settings.json  mcp_config.json
src/trading_bot/mcp/: __init__.py  mcp_client.py  trading_mcp_server.py
src/trading_bot/scripts/: analyze_performance.py  monitor.py  monitor_bot.py  run_ai_bot.py  setup_data_dirs.py  start_mcp_server.py  test_all.py
src/trading_bot/strategies/: grid_trading.py  render_signals.py
src/trading_bot/utils/: binance_client.py.backup_patched  grid_persistence.py  logger.py  news_fetcher.py  performance_tracker.py  telegram_notifier.py.backup_1751001954
trading_bot/: clear_cache.sh  debug_fifo_issue.py  debug_main_vs_test.py  force_reload_fix.py  force_reload_test.py  lot_size_fix.py  main.py  main.py.backup  main.py.backup2  main.py.backup4  main.py.backup_telegram  quick_test.py  test_compound_loading.py  test_trading_fixed.py
trading_bot/config/: trading_config.py
trading_bot/data/: emergency_trades.jsonl  trading_history.db
trading_bot/strategies/: grid_trading.py
trading_bot/utils/: binance_client.py  compound_manager.py  compound_manager.py.backup_force  database_logger.py  dynamic_sizing.py  enhanced_trade_logger.py  error_monitor.py  indicators.py  market_timing.py  performance_dashboard.py  risk_manager.py  simple_profit_tracker.py  telegram_commands.py  telegram_notifier.py
