[project]
name = "trading-bot"
version = "0.3.0"
description = "Simple & Profitable Grid Trading Bot for Crypto"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-binance>=1.0.19",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
trading-bot = "trading_bot.main:main"
